# X-Beacon

./: .gitignore  .golangci.yml  Makefile  README.en.md  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  compat.yml
cmd/gateway/: handlers.go  handlers_test.go  main.go  main_test.go
cmd/xbctl/: dsn.go  integration_test.go  keygen.go  keylist.go  keyrevoke.go  main.go  main_test.go  migrate.go  pricing.go
configs/: auth.example.yaml  config.compat.yaml  config.example.yaml  providers.compat.yaml  providers.example.yaml
deploy/grafana/: README.md
docs/: architecture.md  benchmarks.md  runbook.md
internal/audit/: audit.go  audit_test.go
internal/auth/: README.md  auth.go  auth_test.go  cached.go  cached_test.go  hash.go  keystore.go  keystore_test.go  loader.go  loader_test.go  postgres.go  postgres_test.go  static.go  static_test.go
internal/billing/: logs_query.go  logs_query_test.go  pricing.go  pricing_test.go  worker.go  worker_test.go
internal/cache/: README.md  exact.go  exact_test.go  flatten.go  flatten_test.go  semantic.go  semantic_index.go  semantic_index_test.go  semantic_selector.go  semantic_selector_test.go  semantic_test.go
internal/config/: README.md  config.go  config_test.go
internal/envexpand/: envexpand.go  envexpand_test.go
internal/observability/: README.md  cache_stats.go  cache_stats_test.go  gateway_metrics.go  gateway_metrics_test.go  stats.go  (+11 more)
scripts/: bench.sh  devup-webui.sh
test/: smoke_test.go  wire_compat_test.go
test/compat/python/: README.md  conftest.py  pyproject.toml  test_compat.py
(+141 files in other folders)
